# lama_featurenav-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  rpm.store  tracks.yaml
anj_featurenav/: CMakeLists.txt
anj_featurenav/src/: jockey.cpp
debian/: changelog  control  gbp.conf  rules
featurenav_base/: CHANGELOG.rst  CMakeLists.txt
featurenav_base/include/featurenav_base/: anjockey.h  typedef.h
featurenav_base/msg/: Feature.msg
featurenav_base/src/: ajockey.cpp  anjockey.cpp  njockey.cpp
featurenav_base/srv/: SetSegment.srv
include/anj_featurenav/: jockey.h
include/featurenav_base/: ajockey.h  njockey.h  potential_landmark.h
msg/: Landmark.msg  Segment.msg
rpm/: ros-indigo-anj-featurenav.spec  template.spec
src/: anj_featurenav_node.cpp
srv/: GetSegment.srv
