<?xml version="1.0"?>
<package>
  <name>featurenav_base</name>
  <version>0.1.1</version>
  <description>The featurenav_base package provides base functionality
    for learning and navigating jockeys based on feature detection for
    the Large Maps Framework (LaMa).
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/featurenav_base</url>
  <url type="repository">https://github.com/lama-imr/lama_featurenav.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_featurenav.git</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>lama_jockeys</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
