<?xml version="1.0"?>
<package>
  <name>anj_featurenav</name>
  <version>0.1.1</version>
  <description>The anj_featurenav package provides a learning jockey and a
    navigating jockey for the Large Maps framework (LaMa). It learns a
    path by saving image features and is able to follow the same path.
    It is based on algorithms provided by OpenCV (free ones).
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/anj_featurenav</url>
  <url type="repository">https://github.com/lama-imr/lama_featurenav.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_featurenav.git</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>
  <author email="vladko.petrik@gmail.com">Vladimír Petrík</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>featurenav_base</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>featurenav_base</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>
  </export>
</package>
